# tabletop-macro-language

./: .gitignore  API.md  CODE_OF_CONDUCT.md  Cargo.toml  DOCUMENTATION.md  LICENSE  NOTES.md  README.md  TODO.md  index.html  index.js  package.json  webpack.config.js
.cargo/: config
examples/: README.md  bad-heal-check.ttml  roll-initiative.ttml
lib/: executor.js  index.js  test.js  wasm.js
src/: arg.rs  die.rs  dom.rs  errors.rs  executor.rs  lib.rs  main.rs  message.rs  output.rs  parser.rs  roll.rs  step.rs  stub.rs  token.rs  wasm.rs
tests/: arg.rs  die.rs  executor.rs  parser.rs  roll.rs
