[package]
name = "ttml-parser"
version = "0.1.0"
authors = ["Thomas Lackemann <tommylackemann@gmail.com>"]

[lib]
name = "ttml"
path = "src/lib.rs"

[[bin]]
name = "ttml-parser"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.0", features = [ "serde" ] }
log = "*"
libc = "0.2"
nom = "^3.2"
rand = "0.3"
serde = "1.0.16"
serde_derive = "1.0.16"
serde_json = "1.0.4"
time = "0.1.38"
uuid = { version = "0.4", features = [ "serde", "v4" ] }
