[package]
name = "macro"
version = "0.1.0"
authors = ["Thomas Lackemann <tommylackemann@gmail.com>"]

[lib]
name = "ttml"
path = "src/lib.rs"

[[bin]]
name = "macro"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.0", features = [ "serde" ] }
futures-await = "0.1"
nom = "^3.2"
rand = "0.3"
serde = "1.0.16"
serde_derive = "1.0.16"
serde_json = "1.0.4"
stdweb = "0.3.0"
uuid = { version = "0.4", features = [ "serde", "v4" ] }

[features]
web = []
