[package]
name = "macro"
version = "0.3.0"
authors = ["Thomas Lackemann <tommylackemann@gmail.com>"]

[lib]
name = "ttml"
path = "src/lib.rs"

[[bin]]
name = "macro"
path = "src/main.rs"

[dependencies]
nom = "^4.0.0-alpha1"
serde = "1.0.16"
serde_derive = "1.0.16"
serde_json = "1.0.4"

[profile.release]
opt-level = "s"
